Fixed status text overlapping with  timer svg.

--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -64,7 +64,6 @@ main {
     justify-content: center;
     align-items: stretch;
     color:  #a09a9a;
-    margin-top: -100px;
     font-size: 20px;
 }
 
